Resolve focus visible issue

--- a/src/styles/Modal.module.scss
+++ b/src/styles/Modal.module.scss
@@ -189,10 +189,16 @@
   background: var(--colour-status-correct);
   color: #fff;
   
-  &:hover {
+ @media (hover: hover) {
+   &:hover {
+     background: var(--colour-status-present);
+   } 
+ }
+
+  &:active {
     background: var(--colour-status-present);
   }
-  
+
   span {
     margin-right: 0.5rem;
   }
